rename base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://quizzical-bhabha-f00fb4.netlify.com"
+baseURL = "https://hardtke.netlify.com"
 languageCode = "en-us"
 title = "Physiopraxis Hardtke"
 theme = "hugo-universal-theme"
