--- a/config.toml
+++ b/config.toml
@@ -41,7 +41,7 @@ longitude = "7.156082"
 
 googleMapsApiKey = "AIzaSyBtst1Bb8aOFHYTQ1MxupV077WdfDYSSJ4"
 
-logo = "img/Logo_275x45.png"
+logo = "/img/Logo_275x45.png"
 
 about_us = "<p>Wir sind die führende Physiopraxis in Bonn, lassen Sie sich überzeugen</p>"
 copyright = ""
