--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hardtke.netlify.com"
+baseURL = "https://hardtke.netlify.com/"
 languageCode = "en-us"
 title = "Physiopraxis Hardtke"
 theme = "hugo-universal-theme"
@@ -41,7 +41,7 @@ longitude = "7.156082"
 
 googleMapsApiKey = "AIzaSyBtst1Bb8aOFHYTQ1MxupV077WdfDYSSJ4"
 
-logo = "/img/Logo_275x45.png"
+logo = "img/Logo_275x45.png"
 
 about_us = "<p>Wir sind die führende Physiopraxis in Bonn, lassen Sie sich überzeugen</p>"
 copyright = ""
