--- a/config.toml
+++ b/config.toml
@@ -42,6 +42,9 @@ googleMapsApiKey = "AIzaSyBtst1Bb8aOFHYTQ1MxupV077WdfDYSSJ4"
 logo = "img/Logo_275x45.png"
 logo_small = "img/Logo_187x42.png"
 
+favicon = "img/favicon.ico"
+touchicon = "img/apple-touch-icon.png"
+
 about_us = "<p>Wir sind die führende Physiopraxis in Bonn, lassen Sie sich überzeugen</p>"
 copyright = ""
 
